tenzir/bats/data/reference/every/test_every_errors/step_03.ref
error: interval must be a duration
 --> <input>:1:7
  |
1 | every 0 version
  |       ^ 
  |